[package]
name = "piiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.137"
tracing-subscriber = "0.3.19"
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-examples = "0.8.1"
hf-hub = "0.4.1"
candle-nn = "0.8.2"
tracing-chrome = "0.7.2"
tokenizers = "0.21.0"
serde = "1.0"
records = "0.2.0"